fix: phase 0 fixes for design document

--- a/index.html
+++ b/index.html
@@ -174,12 +174,12 @@
       </div>
       <iframe
         id="design-doc-iframe"
-        src="./docs/TRS80-COMPLETE-BUILD-PROMPT.html"
+        src="/docs/TRS80-COMPLETE-BUILD-PROMPT.html"
       ></iframe>
     </div>
     <div class="footer-link">
       <a
-        href="./docs/TRS80-COMPLETE-BUILD-PROMPT.html"
+        href="/docs/TRS80-COMPLETE-BUILD-PROMPT.html"
         style="color: #0f0; text-decoration: none; font-size: 14px"
       >
         📋 View Complete Design Document
