feat: phase 2 / chore: README

--- a/index.html
+++ b/index.html
@@ -138,6 +138,7 @@
     <div class="button-container">
       <button onclick="showDesignDoc()">Phase 0: Design Doc</button>
       <button onclick="runCPUTest()">Phase 1: Z80 CPU</button>
+      <button onclick="runMemoryTest()">Phase 2: Memory System</button>
     </div>
     <div id="console" tabindex="0"></div>
     <div id="design-doc-container" style="display: none">
